# afm-key-extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  dev-start.sh  flake.nix  module.nix  pyproject.toml
.github/workflows/: ci.yml
assets/: OVMF_CODE_4M.fd  OpenCore-config.plist  fetch-macOS.py
docs/: VM_SETUP.md  WIZARD_AUTOMATION.md
extractor/: airtag_decryptor.py  extract-keys.sh  package.nix  plist_to_findmy.py  provision-package.nix  provision-vm.sh
scripts/: entrypoint.sh  provision.sh
server/: package.nix  tracker.py
server/airtag_tracker/: __init__.py  account_storage.py  app.py  apple_creds.py  auth.py  config.py  db.py  events.py  key_extraction.py  keys.py  login_autotyper.py  macos_adapter.py  opentagviewer_export.py  plist_conversion.py  polling.py  qmp.py  scheduler.py  settings.py  systemd.py  vm.py  vm_apple_signin.py  vm_identity.py  vm_password.py  vm_ssh.py  vm_ui.py
server/airtag_tracker/api/: __init__.py  app.py  sse.py
server/airtag_tracker/automation/: context.py  engine.py  failure_capture.py  popup_watcher.py  screen.py  states.py  wait.py
server/airtag_tracker/debug/: __init__.py  __main__.py
server/airtag_tracker/routes/: __init__.py  account.py  airtags.py  keys.py  settings.py  system.py  vm.py
server/airtag_tracker/vm/: __init__.py  _golden.py  _lifecycle.py  _qemu.py  _snapshot.py
server/static/: index.html
server/static/css/: app.css
server/wizard/: __init__.py  driver.py  qemu.py  recovery.py  reporter.py
tasker/: AirTag_2FA_Relay.prf.xml  install.sh
tests/: conftest.py  test_engine_integration.py  test_failure_capture.py  test_macos_adapter.py  test_sa_coords.py  test_sa_fields.py  test_snapshot.py  test_states.py  test_wait.py
tests/wizard/: conftest.py  test_boot_installer.py  test_driver.py  test_driver_type.py  test_finalize.py  test_format_disk.py  test_integration.py  test_recovery.py  test_reinstall.py  test_reporter.py  test_sentinel_parser.py  test_setup_assistant.py
(+40 files in other folders)
