[project]
name = "airtag-tracker"
version = "0.1.0"
description = "AirTag location tracker with macOS VM automation and web UI"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "findmy",
    "pytesseract",
    "pillow",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
