[project]
name = "airtag-tracker"
version = "0.1.0"
description = "AirTag location tracker with macOS VM automation and web UI"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "findmy",
    "pytesseract",
    "pillow",
    "opencv-python-headless",
    "cryptography",
    "httpx",            # used by fastapi.testclient and as the modern HTTP client
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["server"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
